# VPN-Payment-Bot

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml
tests/: test_customer_linking.py  test_logic.py
vpn_payment_bot/: __init__.py  bot.py  config.py  db.py  logic.py
